crates/pg_syntax/tests/snapshots/postgres_regress/inet@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_seqscan TO on;
---
VariableSetStmt@0..25
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..18 "enable_seqscan"
  Whitespace@18..19 " "
  To@19..21 "TO"
  Whitespace@21..22 " "
  AConst@22..24
    On@22..24 "on"
  Ascii59@24..25 ";"

