crates/pg_syntax/tests/snapshots/postgres_regress/inet@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT i, c, i & c AS \"and\" FROM inet_tbl;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "i"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..11
    ColumnRef@10..11
      Ident@10..11 "c"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..27
    AExpr@13..18
      ColumnRef@13..14
        Ident@13..14 "i"
      Whitespace@14..15 " "
      Op@15..16 "&"
      Whitespace@16..17 " "
      ColumnRef@17..18
        Ident@17..18 "c"
    Whitespace@18..19 " "
    As@19..21 "AS"
    Whitespace@21..22 " "
    Ident@22..27 "\"and\""
  Whitespace@27..28 " "
  From@28..32 "FROM"
  Whitespace@32..33 " "
  RangeVar@33..41
    Ident@33..41 "inet_tbl"
  Ascii59@41..42 ";"

